<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.awesome.ireport.MainActivity">

    <!-- Login progress -->

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginTitle"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:hint="@string/loginEmail"
        android:textColorHint="@color/colorPrimary"
        android:id="@+id/userEmail"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:hint="@string/loginPassword"
        android:textColorHint="@color/colorPrimary"
        android:id="@+id/userpass"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="100dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyle"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/loginText"
        android:onClick="userLogin"/>

    <Button
        android:id="@+id/btnreg"
        android:layout_width="100dp"
        android:textColor="@color/white"
        android:background="@drawable/buttonstyle"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_height="wrap_content"
        android:text="@string/registerLoginButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:onClick="openReg"/>
</LinearLayout>
</ScrollView>